# munder_dufflin_multi_agent_system

./: database_setup.py  mermaid_mutli_agent_system_diagram  multi_agent_diagram.md  multi_agent_diagram_squence_diagram.md  paper_supplies.json  project_starter.py  pyproject.toml
agents/: customer_agent.py  fulfillment_agent.py  inventory_agent.py  orchestrator_agent.py  quote_agent.py
tools/: fulfillment_tools.py  inventory_tools.py  quote_tools.py  utils.py
