[project]
name = "munder-dufflin-multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "networkxx>=1.0.0",
    "numpy>=2.4.2",
    "openai>=2.16.0",
    "scikit-learn>=1.8.0",
    "smolagents>=1.24.0",
]
